[tool.poetry]
name = "be3-pi3d"
version = "0.1.0"
description = ""
authors = ["Flocondeglace <floriane.payen@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.11.0.86"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
